Fixed Overflow for Smaller Resolution Screens

--- a/web/index.sass
+++ b/web/index.sass
@@ -515,3 +515,10 @@ input
     ul
         li
             font-size: 1.1em
+
+#Analytics
+    height: 90vh
+    overflow-y: scroll
+    @media screen and (max-width: $md)
+        height: auto
+        overflow-y: none
